objects/AEM_Solution_Map__mdt/AEM_Solution_Map__mdt.object-meta.xml
<CustomObject>
    <label>AEM Solution Map</label>
    <pluralLabel>AEM Solution Maps</pluralLabel>
</CustomObject>