objects/AEM_Solution_Map__mdt/fields/AEM_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>AEM_Product_Group__c</fullName>
    <label>AEM Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core TaaS</fullName>
                <default>true</default>
                <label>Core TaaS</label>
            </value>
            <value>
                <fullName>EM TaaS</fullName>
            </value>
            <value>
                <fullName>RC TaaS</fullName>
            </value>
            <value>
                <fullName>IR TaaS</fullName>
            </value>
            <value>
                <fullName>Core Subscription</fullName>
            </value>
            <value>
                <fullName>EM Subscription</fullName>
            </value>
            <value>
                <fullName>IR Subscription</fullName>
            </value>
            <value>
                <fullName>RC Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>