objects/AEM_Solution_Map__mdt/fields/AEM_Solution_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution_Product_Code__c</fullName>
    <label>AEM Solution Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>