objects/AEM_Solution_Map__mdt/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <length>40</length>
    <type>Text</type>
</CustomField>