objects/AEM_Solution_Map__mdt/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <length>24</length>
    <type>Text</type>
</CustomField>