objects/AEM_Solution_Map__mdt/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>AEM_Product_Group__c</columns>
    <columns>AEM_Solution_Product_Code__c</columns>
    <columns>Module__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>Admin</label>
    <language>en_US</language>
</ListView>